messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  namespace: default
spec:
  selector:
    app: django-messaging-app
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
