messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: messaging-app.local
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service
            port:
              number: 80
